--- a/pom.xml
+++ b/pom.xml
@@ -3,27 +3,85 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.org.softexpert</groupId>
-	<artifactId>automated-testng-jbehave</artifactId>
+	<groupId>com.org</groupId>
+	<artifactId>quality-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
-	<name>automated-testng-jbehave</name>
+	<name>Quality Project Parent</name>
+	<description>Parent POM that includes dependencies for any test project (UI and API)</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<parallel.enabled>false</parallel.enabled>
+		<parallel.threads>5</parallel.threads>
 
-		<testng.version>6.14.3</testng.version>
-		<selenium.version>3.11.0</selenium.version>
-		<jbehave.version>4.3.2</jbehave.version>
-		<owner.version>1.0.8</owner.version>
+		<selenium.version>3.14.0</selenium.version>
+		<owner.version>1.0.10</owner.version>
+		<junit-jupiter.version>5.3.0</junit-jupiter.version>
+		<junit-platform.version>1.3.0</junit-platform.version>
+		<rest-assured.version>3.1.1</rest-assured.version>
+		<jackson.version>2.9.6</jackson.version>
+		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>${testng.version}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-jupiter.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>${junit-jupiter.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<version>${junit-platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-engine</artifactId>
+			<version>${junit-platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-suite-api</artifactId>
+			<version>${junit-platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-runner</artifactId>
+			<version>${junit-platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${rest-assured.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -31,14 +89,67 @@
 			<version>${selenium.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jbehave</groupId>
-			<artifactId>jbehave-core</artifactId>
-			<version>${jbehave.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.aeonbits.owner</groupId>
 			<artifactId>owner</artifactId>
 			<version>${owner.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>run-tests</id>
+			<activation>
+				<property>
+					<name>testName</name>
+				</property>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>2.22.0</version>
+							<configuration>
+								<includes>
+									<include>**/${testName}.*</include>
+								</includes>
+								<testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
+								<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
+								<trimStackTrace>false</trimStackTrace>
+								<systemPropertyVariables>
+									<junit.jupiter.execution.parallel.enabled>${parallel.enabled}</junit.jupiter.execution.parallel.enabled>
+									<junit.jupiter.execution.parallel.config.strategy>fixed</junit.jupiter.execution.parallel.config.strategy>
+									<junit.jupiter.execution.parallel.config.fixed.parallelism>${parallel.threads}</junit.jupiter.execution.parallel.config.fixed.parallelism>
+								</systemPropertyVariables>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+		<profile>
+			<id>formatter</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>net.revelc.code.formatter</groupId>
+							<artifactId>formatter-maven-plugin</artifactId>
+							<version>2.8.0</version>
+							<configuration>
+								<encoding>UTF-8</encoding>
+								<configFile>code_style/formatter.xml</configFile>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 </project>
